<resources>
    <string name="app_name">My First Android Demo</string>
    <string name="first_button">First Button</string>
    <string name="finish_button">Finish Button</string>
    <string name="explicit_intent_button">显式调用Intent</string>
    <string name="implicit_intent_button">隐式调用Intent</string>
    <string name="view_button">调用浏览器</string>
    <string name="send_data_to_next_intent">向下一个活动传递数据</string>
    <string name="send_data_to_pre_intent">向上一个活动传递数据</string>
    <string name="next_intent_send_data_to_this_intent">下个页面传数据给本页面</string>

    <string name="start_a_group_chat">发起群聊</string>
    <string name="add_a_new_friend">添加朋友</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="payment">收付款</string>
    <string name="help">帮助与反馈</string>

    <string name="second_button">Second Button</string>
    <string name="third_button">Third Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
